--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DoctorCare</title>
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -253,7 +253,7 @@
 
         <div class="col-b">
           <img
-            src="assets/mulher-negra-com-moletom-verde-com-as-duas-maos-no-peito.png"
+            src="./assets/mulher-negra-com-moletom-verde-com-as-duas-maos-no-peito.png"
             alt="mulher negra vestindo moleton verde com as duas mãos no peito e sorrindo"
           />
         </div>
@@ -472,7 +472,7 @@
         </div>
         <div class="col-b">
           <img
-            src="/assets/doutor-feliz-segurando-prancheta-com-dois-pacientes.png"
+            src="./assets/doutor-feliz-segurando-prancheta-com-dois-pacientes.png"
             alt="Doutor feliz segurando prancheta e com dois pacientes"
           />
         </div>
@@ -560,7 +560,7 @@
 
         <div class="col-b">
           <img
-            src="assets/homem-negro-de-moletom-mexendo-no-celular.png"
+            src="./assets/homem-negro-de-moletom-mexendo-no-celular.png"
             alt="homem negro com moletom bege mexendo no celular e sorrindo"
           />
         </div>
@@ -739,6 +739,6 @@
 
     <!-- ScrollReveal lib -->
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
